// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1a4ylj6-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-sm5nl4-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1kfeu35-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1b6a3il-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1uzqfpi-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1a4ylj6-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-sm5nl4-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-4gyd22-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-5c5bb9-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1kuys7g-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1a4ylj6-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-sm5nl4-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-46cnn2-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1qmreon-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-167vsbk-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1a4ylj6-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-sm5nl4-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-46cnn2-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-yfpddg-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-2hzz11-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="css-987v97"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1a4ylj6-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-sm5nl4-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-brhecq-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1edrif-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1ecnqgx-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;
